fix: Enlarge font-size from .75em to .9em because text size in table is too small

--- a/_sass/defaults/_tables.scss
+++ b/_sass/defaults/_tables.scss
@@ -7,7 +7,7 @@ table {
   margin-bottom: 1em;
   width: 100%;
   font-family: $global-font-family;
-  font-size: $type-size-6;
+  font-size: .9em;
   border-collapse: collapse;
   overflow-x: auto;
 
